Don't set a default tab text color; allows System-wide scheme to set it. Tested with Point Reyes Green Color Scheme.

BUG: 108593


svn path=/trunk/KDE/kdebase/konsole/; revision=432853